--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Yuli Liu"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://yuli-liu.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://yuli-liu.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "l-lyl/yuli-liu.github.io"
 
