--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,7 +21,7 @@ main:
   #  url: /year-archive/
     
   - title: "CV"
-    url: ../files/resume-2024.pdf
+    url: https://github.com/l-lyl/yuli-liu.github.io/blob/master/files/resume-2024.pdf
     
   #- title: "Guide"
   #  url: /markdown/
